[tool.poetry]
name = "companiesscrap"
version = "0.1.0"
description = ""
authors = ["ZiG <x6vital@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.27.1"
requests = "^2.32.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
beautifulsoup4 = "^4.12.3"
aiohttp = "^3.11.7"
scrapy = "^2.12.0"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
